<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoFish</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="you">You</string>
    <string name="two">Player 2</string>
    <string name="three">Player 3</string>
    <string name="four">Player 4</string>
    <string name="start">Quartets: 0</string>
    <string name="end">End Match</string>
</resources>
